# bidule

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: mod.rs
