[package]
name = "bidule"
version = "0.1.4"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Ultra simple Functional Reactive Programming, made with stuff, things, device, thingumajig, etc."
keywords = ["functional", "frp", "bidule", "machin", "truc"]

homepage = "https://github.com/phaazon/bidule"
repository = "https://github.com/phaazon/bidule"
documentation = "https://docs.rs/bidule"
readme = "README.md"

[dependencies]
